# openai-helper

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  setup.py
drivers/: README.md  __init__.py  call2_driver.py  call_plac.py  driver_openai_helper.py  extract_output_plac.py  extract_output_plac_driver.py  extract_output_test.py  extract_primary_topic_driver.py  integration_wrapper.py  openai_connector_driver.py  openai_custom_model_driver.py  openai_helper_driver.py  run_chat_completion_2_driver.py  run_chat_completion_driver.py  test-keys.yaml
openai_helper/: __init__.py
openai_helper/bp/: __init__.py  extract_output.py  openai_chat_completion.py  openai_completion.py  openai_custom_model.py  openai_helper.py  openai_text_completion.py
openai_helper/dmo/: __init__.py  chat_message_formatter.py  completion_event_extractor.py  etl_handle_textcompletions.py  etl_remove_indicators.py  etl_remove_listindicators.py  etl_remove_promptindicators.py  etl_replace_cliches.py  etl_replace_duplicatedinput.py  input_event_extractor.py  input_token_counter.py  no_openai_event.py  openai_connector.py  output_extractor_chat.py
openai_helper/svc/: __init__.py  create_openai_answer.py  extract_primary_topic.py  extract_top_response.py  run_chat_completion.py  run_openai_completion.py  run_openai_event.py  run_text_completion.py
resources/scripts/: copy.ps1  copy_setup.ps1
tests/: chat_message_formatter_test.py  driver_extract_output.py  driver_openai_connector.py  driver_openai_custom_model.py  driver_openai_helper.py  etl_remove_listindicators_test.py  extract_output_1_test.py  extract_output_2_test.py  extract_top_response_test.py  input_token_counter_test.py  openai_completion_test.py  openai_connector_test.py  openai_helper_test.py  test_extract_output.py  test_extract_top_response.py  test_openai_completion.py  test_openai_connector.py  test_openai_helper.py
