[tool.poetry]
authors = ["Craig Trim <craigtrim@gmail.com>"]
description = "OpenAI Helper for Easy I/O"
name = "openai-helper"
version = "0.1.8"

[tool.poetry.dependencies]
baseblock = "*"
openai = "^0.20.0"
python = "3.8.5"

[tool.poetry.dev-dependencies]
autopep8 = "*"
pytest = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
